@@ -2,7 +2,6 @@
   <PLUGIN name="atto_wordimport">
     <PHP_EXTENSIONS>
       <PHP_EXTENSION name="xsl" level="required" />
-      <PHP_EXTENSION name="tidy" level="optional" />
     </PHP_EXTENSIONS>
   </PLUGIN>
 </COMPATIBILITY_MATRIX>
